--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.8",
     "jotai": "^2.15.0",
     "react": "19.1.0",
