--- a/package.json
+++ b/package.json
@@ -5,25 +5,28 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "^54.0.16",
+    "expo": "54.0.19",
     "expo-auth-session": "^7.0.8",
     "expo-av": "^16.0.7",
+    "expo-blur": "~15.0.7",
     "expo-camera": "^17.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.10",
     "expo-crypto": "^15.0.7",
+    "expo-dev-client": "~6.0.16",
     "expo-device": "^8.0.9",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
@@ -35,13 +38,13 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.8",
     "jotai": "^2.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
