--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "^17.0.7",
     "expo-media-library": "^18.2.0",
@@ -46,11 +47,13 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-pell-rich-editor": "^1.10.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-video": "^6.17.0",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
   },
