--- a/app.json
+++ b/app.json
@@ -19,6 +19,7 @@
       }
     },
     "android": {
+      "package": "com.dianasensei.haritage",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
