--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "ios": "expo run:io --device",
     "web": "expo start --web",
     "lint": "expo lint"
   },
