--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "^17.0.7",
+    "expo-localization": "^17.0.7",
     "expo-media-library": "^18.2.0",
     "expo-notifications": "^0.32.12",
     "expo-router": "~6.0.11",
@@ -41,9 +42,11 @@
     "expo-system-ui": "~6.0.8",
     "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.8",
+    "i18next": "^25.6.0",
     "jotai": "^2.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.2.1",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
